098_bst_set/grade.txt
Grading at 11/08/2019:18:13:12.778815
For commit ID 61deaa35f5e00da05ebf525a6d7530ec5baa1487
Grading at Fri Nov  8 13:13:12 EST 2019
-----------------------------------------------
testcase 1 : Testing with BstSet<int>
...compiling...
In file included from 90-tester.cpp:1:0:
bstset.h: In instantiation of ‘BstSet<K>::Node* BstSet<K>::copyHelper(const BstSet<K>::Node*) [with K = int]’:
bstset.h:37:49:   required from ‘BstSet<K>::BstSet(const BstSet<K>&) [with K = int]’
90-tester.cpp:92:36:   required from here
bstset.h:28:48: error: ‘const class BstSet<int>::Node’ has no member named ‘value’
     Node * newNode = new Node(node->key, node->value);
                                          ~~~~~~^~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstSet<std::string>
...compiling...
In file included from 90-tester.cpp:1:0:
bstset.h: In instantiation of ‘BstSet<K>::Node* BstSet<K>::copyHelper(const BstSet<K>::Node*) [with K = std::__cxx11::basic_string<char>]’:
bstset.h:37:49:   required from ‘BstSet<K>::BstSet(const BstSet<K>&) [with K = std::__cxx11::basic_string<char>]’
90-tester.cpp:92:36:   required from here
bstset.h:28:48: error: ‘const class BstSet<std::__cxx11::basic_string<char> >::Node’ has no member named ‘value’
     Node * newNode = new Node(node->key, node->value);
                                          ~~~~~~^~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstSet<(a custom class we wrote)>
...compiling...
In file included from 90-tester.cpp:1:0:
bstset.h: In instantiation of ‘BstSet<K>::Node* BstSet<K>::copyHelper(const BstSet<K>::Node*) [with K = Tester]’:
bstset.h:37:49:   required from ‘BstSet<K>::BstSet(const BstSet<K>&) [with K = Tester]’
90-tester.cpp:92:36:   required from here
bstset.h:28:48: error: ‘const class BstSet<Tester>::Node’ has no member named ‘value’
     Node * newNode = new Node(node->key, node->value);
                                          ~~~~~~^~~~~
The code did not compile.  This test failed.

Overall Grade: F
